manifests/nfs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-client-pod
spec:
  containers:
  - name: app
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: nfs-volume
      mountPath: /mnt/nfs
  volumes:
  - name: nfs-volume
    nfs:
      server: 192.168.1.60
      path: /Public
      readOnly: false
