manifests/pod-nfs-recupero-pvc.yaml
#Questo funziona ma crea un nuovo pv
---
apiVersion: v1
kind: Pod
metadata:
  name: test-nfs-restore
spec:
  containers:
    - name: app
      image: busybox
      command: ["sh", "-c", "ls -la /data && sleep 3600"]
      volumeMounts:
        - name: nfs-storage
          mountPath: /data
  volumes:
    - name: nfs-storage
      persistentVolumeClaim:
        claimName: nfs-pvc-restore
